@startuml Vue_logique

class Magasin {
  +id: int
  +nom: str
  +quartier: str
}

class Produit {
  +id: int
  +nom: str
  +categorie: str
  +prix: float
  +description: str
}

class Stock {
  +id: int
  +produit_id: int
  +magasin_id: int
  +quantite: int
  +seuil_critique: int
}

class StockCentral {
  +id: int
  +produit_id: int
  +quantite: int
  +seuil_critique: int
}

class Vente {
  +id: int
  +date: datetime
  +total: float
  +magasin_id: int
}

class LigneVente {
  +id: int
  +vente_id: int
  +produit_id: int
  +quantite: int
  +prix_unitaire: float
}

Magasin "1" <-- "0..*" Stock : contient >
Produit "1" <-- "0..*" Stock : concerne >

Produit "1" <-- "0..*" StockCentral : centralise >

Magasin "1" <-- "0..*" Vente : effectue >
Vente "1" --> "1..*" LigneVente : compose >
Produit "1" <-- "0..*" LigneVente : vend >

@enduml
